# uibbx

backend/: .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1092ee804c57_add_format_but_as_list_of_string_back_.py  15544a474b32_remove_format_in_bundles_table.py  15c04b222220_keep_fixing_ambiguousforeignkeyserror_.py  19df7cd0ee28_add_nickname_to_user_table.py  361048ed91c8_update_amount_from_int_to_float.py  413f4e702372_add_bundles_table.py  528124365e80_add_verification_codes_table.py  596ed6a4ebed_add_subscription_orders_table.py  5a3f4b43d3da_update_purchases_table.py  61e9937678b1_add_purchase_orders_table.py  6cf4c3eadc8b_add_order_id_to_purchases_table.py  75f2b85a80b8_update_refer_type_to_refers_table.py  77df078bedcc_made_deleted_non_nullable_in_bundle_.py  7c109f50fa28_make_coins_field_in_userstable_non_.py  7d36728cc32c_add_purchasesbycoinstable_and_.py  7dda3f0ebe33_add_purchase_price_to_bundle_table.py  7f1321067121_add_likes_table.py  96b3bdc537e1_fix_ambiguousforeignkeyserror_for_.py  a4f9be118b4c_add_users_table.py  ad92599fba72_update_nullable_props_for_refers_table.py  b3577f4b0e6f_update_subscription_orders_table.py  b6477f54f3da_update_refer_type_to_refers_table.py  bb821a99d5e7_add_deleted_to_bundle_table.py  bbcd44a8800d_add_description_to_user_table.py  bd5523468c84_add_subscriptions_purchases_downloads_.py  (+7 more)
backend/app/: config.py
mailing-service/: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
mailing-service/app/: config.py
mailing-service/templates/: welcome.j2
(+104 files in other folders)
